Adds coupons to floating widget

--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -49,6 +49,7 @@
             android:visibility="gone">
 
             <TextView
+                android:id="@+id/coupons"
                 android:layout_width="100dp"
                 android:text="Sample text"
                 android:layout_height="300dp" />
