--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="20dp">
 
     <!--Root container-->
     <RelativeLayout
@@ -51,7 +52,13 @@
             <TextView
                 android:id="@+id/coupons"
                 android:layout_width="100dp"
+                android:layout_height="300dp"
                 android:text="Sample text"
+                android:visibility="gone" />
+
+            <WebView
+                android:id="@+id/webView"
+                android:layout_width="300dp"
                 android:layout_height="300dp" />
 
             <RelativeLayout
