--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -40,38 +40,32 @@
         </RelativeLayout>
 
         <!--View while view is expanded-->
-        <LinearLayout
-            android:id="@+id/expanded_container"
+        <ScrollView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#eee"
-            android:orientation="horizontal"
-            android:padding="8dp"
-            android:visibility="gone">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/coupons"
-                android:layout_width="100dp"
-                android:layout_height="300dp"
-                android:text="Sample text"
-                android:visibility="gone" />
-
-            <WebView
-                android:id="@+id/webView"
-                android:layout_width="300dp"
-                android:layout_height="300dp" />
-
-            <RelativeLayout
+            <LinearLayout
+                android:id="@+id/expanded_container"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:background="#eee"
+                android:orientation="vertical"
+                android:padding="8dp"
+                android:visibility="gone">
 
-                <ImageView
-                    android:id="@+id/close_button"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_close" />
-            </RelativeLayout>
-        </LinearLayout>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/close_button"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_close" />
+                </RelativeLayout>
+            </LinearLayout>
+        </ScrollView>
+
     </RelativeLayout>
 </FrameLayout>
