--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <TextView
@@ -24,7 +24,6 @@
     <WebView
         android:id="@+id/itemWebView"
         android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:visibility="gone" />
+        android:layout_height="300dp" />
 
 </LinearLayout>
